trunk/Archive2/73/77a7a520202fd6/output
main.cpp:1:9: warning: #pragma once in main file [enabled by default]
 #pragma once
         ^
main.cpp:10:1: error: expected ';' after struct definition
 }
 ^
